# cobyla-argmin

./: CHANGELOG.md  Cargo.toml  README.md
examples/: paraboloid.rs
src/: cobyla_solver.rs  cobyla_state.rs  lib.rs
